chi/org.eclipse.escet.chi.tests/tests/spec/exit/xper_model_crash.run.err
ERROR: Runtime error while executing "X".
at xper "X" near line 25.
CAUSE: Runtime error while executing "M".
at model "M" near line 16.
CAUSE: Array index is too large (index 1 does not exist for a list with 0 elements).
